# MamaYagaBot

./:  requirements.txt  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  main.py  mamayoga_bot.db  pyproject.toml  requirements.txt  reset_db.py
.github/workflows/: docker-publish.yml
src/:  requirements.txt  .gitignore  bot.py  common.py  config.py  fsm.py  main.py  states.py
src/dao/: __init__.py  crud.py  database.py  grist.py  models.py
src/dao/alembic/: env.py
src/dao/alembic/versions/: 1219d22c6380_initial_schema.py  1318d5737087_added_users_table.py  276ba6d9be7c_initial_create_users_and_requests.py  (+5 more)
src/dao/requirements/: base- requirements.txt  base-requirements.txt  dev-requirements.txt  prod- requirements.txt
src/docker/: docker-compose.yml
src/handlers/: __init__.py  admin.py  booking.py  course_flow.py  flow_contra.py  flow_experience.py  flow_formats.py  flow_pregnancy.py  followup.py  menu.py  message.py  rules.py  start.py  welcome.py
src/handlers/course/: __init__.py  back.py  consult.py  contact.py  contra.py  course_info.py  experience.py  feeling.py  flow_course_info.py  formats.py  leave_contact.py  payment.py  remind_later.py  request.py  start.py  term.py  trial.py  trial_material.py  user_messages.py
src/handlers/dao/: models.py
src/keyboards/: inline_kb.py  reply_kb.py
src/services/: requests.py  users.py
src/texts/: common.py  course.py  start.py
src/utils/: airtable_client.py  broadcast.py  followup.py  grist_client.py  grist_helper.py  humanize.py  nocodb_sync.py  state_manager.py
(+6 files in other folders)
